# SmartWiki

./: .env.example  .env.test.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
chatbot-api/: config.py  ingest.py  main.py  rag.py  requirements.txt  wikijs_client.py
docker/postgres/: init.sql
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ENHANCEMENT-CLOUDRUN.md  ENHANCEMENT-REACT.md
tests/: conftest.py  docker-compose.test.yml  requirements-test.txt
tests/e2e/: conftest.py  test_wiki_smoke.py
tests/fixtures/: sample.txt  test.md
tests/integration/: test_chatbot_api.py  test_organizer_api.py  test_qdrant_integration.py
tests/unit/: test_file_parser.py  test_ingest_placeholder.py  test_organizer.py  test_rag.py  test_wikijs_api.py
wiki-assets/: README.md  chat-widget.css  chat-widget.js  submit-form.html
wiki-organizer/: Dockerfile  config.py  db.py  file_parser.py  main.py  organizer.py  requirements.txt  wikijs_api.py
