[project]
name = "smartwiki"
version = "0.1.0"
description = "SmartWiki — Wiki.js + FastAPI organizer & RAG chatbot (dev/test workspace)"
readme = "README.md"
requires-python = ">=3.12"
# Union of wiki-organizer + chatbot-api runtime deps (single venv for tests & tooling)
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "anthropic==0.40.0",
    "httpx==0.28.1",
    "python-multipart==0.0.17",
    "python-docx==1.1.2",
    "pypdf==5.1.0",
    "asyncpg==0.30.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "tenacity==9.0.0",
    "voyageai==0.3.7",
    "qdrant-client==1.12.1",
    "slowapi==0.1.9",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "respx==0.21.1",
    "playwright==1.49.1",
    "pytest-playwright==0.6.2",
]

[tool.uv]
package = false
